apps/url-shortener/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: url-shortener
  namespace: url-shortener

spec:
  replicas: 2

  selector:
    matchLabels:
      app: url-shortener

  template:
    metadata:
      labels:
        app: url-shortener

    spec:
      containers:
        - name: url-shortener

          image: 397348547008.dkr.ecr.eu-west-2.amazonaws.com/eks-app:latest

          ports:
            - containerPort: 80
